# mcp-server-bigquery

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  podman-compose.yml  pyproject.toml  smithery.yaml
.github/workflows/: README.md  SECRETS.md  deploy-cloud-run.yml.example  docker-publish.yml
src/mcp_server_bigquery/: __init__.py  server.py
